--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,157 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>CoolApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="contanier">
+  <app-root>
+    <!-- <div class="container">
+      <div class="wrapper">
+        <div class="loader">
+          <div class="dot">
+          </div>
+        </div>
+        <div class="loader">
+          <div class="dot">
+          </div>
+        </div>
+        <div class="loader">
+          <div class="dot">
+          </div>
+        </div>
+        <div class="loader">
+          <div class="dot">
+          </div>
+        </div>
+        <div class="loader">
+          <div class="dot">
+          </div>
+        </div>
+        <div class="loader">
+          <div class="dot">
+          </div>
+        </div>
+      </div>
+      <div class="text">
+        Please wait</div>
+    </div>
+
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        text-align: center;
+        background: #0079d7;
+      }
+
+      .container {
+        position: relative;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+      }
+
+      .wrapper {
+        position: absolute;
+        top: -35px;
+        transform: scale(1.5);
+      }
+
+      .loader {
+        height: 25px;
+        width: 1px;
+        position: absolute;
+        animation: rotate 3.5s linear infinite;
+      }
+
+      .loader .dot {
+        top: 30px;
+        height: 7px;
+        width: 7px;
+        background: #fff;
+        border-radius: 50%;
+        position: relative;
+      }
+
+      .text {
+        position: absolute;
+        bottom: -85px;
+        font-size: 25px;
+        font-weight: 400;
+        font-family: 'Poppins', sans-serif;
+        color: #fff;
+      }
+
+      @keyframes rotate {
+        30% {
+          transform: rotate(220deg);
+        }
+
+        40% {
+          transform: rotate(450deg);
+          opacity: 1;
+        }
+
+        75% {
+          transform: rotate(720deg);
+          opacity: 1;
+        }
+
+        76% {
+          opacity: 0;
+        }
+
+        100% {
+          opacity: 0;
+          transform: rotate(0deg);
+        }
+      }
+
+      .loader:nth-child(1) {
+        animation-delay: 0.15s;
+      }
+
+      .loader:nth-child(2) {
+        animation-delay: 0.3s;
+      }
+
+      .loader:nth-child(3) {
+        animation-delay: 0.45s;
+      }
+
+      .loader:nth-child(4) {
+        animation-delay: 0.6s;
+      }
+
+      .loader:nth-child(5) {
+        animation-delay: 0.75s;
+      }
+
+      .loader:nth-child(6) {
+        animation-delay: 0.9s;
+      }
+    </style> -->
+  </app-root>
 </body>
+
+<!-- Bootstrap -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </html>
